--- a/task_1_8/task_1_8.html
+++ b/task_1_8/task_1_8.html
@@ -41,5 +41,6 @@
 		<div class="inner"></div>
 	</div>
 </div>
+<script>document.write(unescape('%3Cdiv id="hm_t_95398"%3E%3C/div%3E%3Cscript charset="utf-8" src="http://crs.baidu.com/t.js?siteId=a71fa4ec5a4267f60964c443160910bc&planId=95398&async=0&referer=') + encodeURIComponent(document.referrer) + '&title=' + encodeURIComponent(document.title) + '&rnd=' + (+new Date) + unescape('"%3E%3C/script%3E'));</script>
 </body>
 </html>
