--- a/task_3_41/task_3_41.html
+++ b/task_3_41/task_3_41.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>日历组件 1</title>
-<link rel="stylesheet" type="text/css" href="css/task_3_40.css">
+<link rel="stylesheet" type="text/css" href="css/task_3_41.css">
 <link rel="stylesheet" type="text/css" href="css/calender.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
@@ -11,6 +11,7 @@
 <body>
 <div id="wrapper">
 	<div class="container">
+		<img src="images/calender.png" align="absmiddle">
 		<input type="text" placeholder="点击选择日期" id="caleSelect">
 	</div>
 </div>
@@ -22,7 +23,7 @@
 </div>
 <script type="text/javascript" src="js/util.js"></script>
 <script type="text/javascript" src="js/calender.js"></script>
-<script type="text/javascript" src="js/task_3_40.js"></script>
+<script type="text/javascript" src="js/task_3_41.js"></script>
 <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fa71fa4ec5a4267f60964c443160910bc' type='text/javascript'%3E%3C/script%3E"));
